crates/fec-parser/tests/snapshots/covers__legacy_f3x_p3_4_1215766.snap
---
source: crates/fec-parser/tests/covers.rs
expression: "legacy_cover(\"P3.4_1215766.fec\")"
snapshot_kind: text
---
{
  "form": "Form3X",
  "data": {
    "form_type": "F3XN",
    "filer_committee_id": "C00617753",
    "committee_name": "COPPER STATE RURAL",
    "address": {
      "street_1": "PO BOX 332",
      "street_2": null,
      "city": "AJO",
      "state": "AZ",
      "zip_code": "85321"
    },
    "change_of_address": false,
    "report_code": "YE",
    "election_code": null,
    "election_date": null,
    "state_of_election": null,
    "coverage_from_date": "2017-01-01",
    "coverage_through_date": "2017-12-31",
    "qualified_committee": false,
    "treasurer": {
      "first_name": "MARIE",
      "last_name": "",
      "middle_name": null,
      "prefix": null,
      "suffix": null
    },
    "date_signed": "2018-02-22",
    "summary": {
      "line6a_cash_on_hand_jan_1": 32.0,
      "line6a_year": 2017,
      "line6b_cash_on_hand_beginning_period": 32.0,
      "line6c_total_receipts": {
        "column_a": 2477.09,
        "column_b": 2477.09
      },
      "line6d_subtotal": {
        "column_a": 2509.09,
        "column_b": 2509.09
      },
      "line7_total_disbursements": {
        "column_a": 2414.31,
        "column_b": 2414.31
      },
      "line8_cash_on_hand_close_of_period": {
        "column_a": 94.78,
        "column_b": 94.78
      },
      "line9_debts_owed_to_committee": 0.0,
      "line10_debts_owed_by_committee": 0.0
    },
    "detailed_summary": {
      "receipts": {
        "line11a_i_individuals_itemized": {
          "column_a": 1.0,
          "column_b": 0.0
        },
        "line11a_ii_individuals_unitemized": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line11a_iii_individuals_total": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line11b_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11c_other_political_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11d_total_contributions": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line12_transfers_from_affiliated": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line13_loans_received": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line14_loan_repayments_received": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line15_offsets_to_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line16_refunds_of_federal_contributions": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17_other_federal_receipts": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line18a_transfers_from_nonfederal_account": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line18b_transfers_from_levin_funds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line18c_total_nonfederal_transfers": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line19_total_receipts": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line20_total_federal_receipts": {
          "column_a": 2477.09,
          "column_b": 2477.09
        }
      },
      "disbursements": {
        "line21a_i_shared_operating_federal_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line21a_ii_shared_operating_nonfederal_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line21b_other_federal_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line21c_total_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line22_transfers_to_affiliated": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line23_contributions_to_federal_candidates": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line24_independent_expenditures": {
          "column_a": 2414.31,
          "column_b": 2414.31
        },
        "line25_coordinated_party_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line26_loan_repayments_made": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line27_loans_made": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28a_refunds_to_individuals": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28b_refunds_to_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28c_refunds_to_other_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28d_total_contribution_refunds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line29_other_disbursements": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30a_i_fea_federal_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30a_ii_fea_levin_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30b_fea_all_federal": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30c_fea_total": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line31_total_disbursements": {
          "column_a": 2414.31,
          "column_b": 2414.31
        },
        "line32_total_federal_disbursements": {
          "column_a": 2414.31,
          "column_b": 2414.31
        }
      },
      "net": {
        "line33_total_contributions": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line34_total_contribution_refunds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line35_net_contributions": {
          "column_a": 2477.09,
          "column_b": 2477.09
        },
        "line36_total_federal_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line37_offsets_to_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line38_net_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        }
      }
    }
  }
}
