crates/fec-parser/tests/snapshots/covers__legacy_f3x_v3_00_13801.snap
---
source: crates/fec-parser/tests/covers.rs
expression: "legacy_cover(\"3.00_13801.fec\")"
snapshot_kind: text
---
{
  "form": "Form3X",
  "data": {
    "form_type": "F3XN",
    "filer_committee_id": "C00000935",
    "committee_name": "Democratic Congressional Campaign Committee - Expenditures",
    "address": {
      "street_1": "430 South Capitol Street, SE",
      "street_2": "2nd Floor",
      "city": "Washington",
      "state": "DC",
      "zip_code": "20003"
    },
    "change_of_address": false,
    "report_code": "M4",
    "election_code": null,
    "election_date": null,
    "state_of_election": null,
    "coverage_from_date": "2001-03-01",
    "coverage_through_date": "2001-03-31",
    "qualified_committee": true,
    "treasurer": {
      "first_name": "",
      "last_name": "Howard Wolfson",
      "middle_name": null,
      "prefix": null,
      "suffix": null
    },
    "date_signed": "2001-04-20",
    "summary": {
      "line6a_cash_on_hand_jan_1": 694163.86,
      "line6a_year": 2001,
      "line6b_cash_on_hand_beginning_period": 843199.96,
      "line6c_total_receipts": {
        "column_a": 1126349.55,
        "column_b": 2446300.88
      },
      "line6d_subtotal": {
        "column_a": 1969549.51,
        "column_b": 3140464.74
      },
      "line7_total_disbursements": {
        "column_a": 1567060.48,
        "column_b": 2737975.71
      },
      "line8_cash_on_hand_close_of_period": {
        "column_a": 402489.03,
        "column_b": 402489.03
      },
      "line9_debts_owed_to_committee": 0.0,
      "line10_debts_owed_by_committee": 4877882.87
    },
    "detailed_summary": {
      "receipts": {
        "line11a_i_individuals_itemized": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11a_ii_individuals_unitemized": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11a_iii_individuals_total": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11b_political_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11c_other_political_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line11d_total_contributions": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line12_transfers_from_affiliated": {
          "column_a": 835000.0,
          "column_b": 1684000.0
        },
        "line13_loans_received": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line14_loan_repayments_received": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line15_offsets_to_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line16_refunds_of_federal_contributions": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line17_other_federal_receipts": {
          "column_a": 1385.78,
          "column_b": 2420.98
        },
        "line18a_transfers_from_nonfederal_account": {
          "column_a": 289963.77,
          "column_b": 759879.9
        },
        "line18b_transfers_from_levin_funds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line18c_total_nonfederal_transfers": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line19_total_receipts": {
          "column_a": 1126349.55,
          "column_b": 2446300.88
        },
        "line20_total_federal_receipts": {
          "column_a": 836385.78,
          "column_b": 1686420.98
        }
      },
      "disbursements": {
        "line21a_i_shared_operating_federal_share": {
          "column_a": 245486.19,
          "column_b": 644158.32
        },
        "line21a_ii_shared_operating_nonfederal_share": {
          "column_a": 272340.85,
          "column_b": 736649.54
        },
        "line21b_other_federal_operating_expenditures": {
          "column_a": 482960.63,
          "column_b": 768079.08
        },
        "line21c_total_operating_expenditures": {
          "column_a": 1000787.67,
          "column_b": 2148886.94
        },
        "line22_transfers_to_affiliated": {
          "column_a": 41254.96,
          "column_b": 43754.96
        },
        "line23_contributions_to_federal_candidates": {
          "column_a": 25017.85,
          "column_b": 34839.36
        },
        "line24_independent_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line25_coordinated_party_expenditures": {
          "column_a": 0.0,
          "column_b": 10494.45
        },
        "line26_loan_repayments_made": {
          "column_a": 500000.0,
          "column_b": 500000.0
        },
        "line27_loans_made": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28a_refunds_to_individuals": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28b_refunds_to_party_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28c_refunds_to_other_committees": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line28d_total_contribution_refunds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line29_other_disbursements": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30a_i_fea_federal_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30a_ii_fea_levin_share": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30b_fea_all_federal": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line30c_fea_total": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line31_total_disbursements": {
          "column_a": 1567060.48,
          "column_b": 2737975.71
        },
        "line32_total_federal_disbursements": {
          "column_a": 1294719.63,
          "column_b": 2001326.17
        }
      },
      "net": {
        "line33_total_contributions": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line34_total_contribution_refunds": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line35_net_contributions": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line36_total_federal_operating_expenditures": {
          "column_a": 728446.82,
          "column_b": 1412237.4
        },
        "line37_offsets_to_operating_expenditures": {
          "column_a": 0.0,
          "column_b": 0.0
        },
        "line38_net_operating_expenditures": {
          "column_a": 728446.82,
          "column_b": 1412237.4
        }
      }
    }
  }
}
